--- a/CuaHangThucPham/CuaHangThucPham/Views/Shared/_Layout.cshtml
+++ b/CuaHangThucPham/CuaHangThucPham/Views/Shared/_Layout.cshtml
@@ -79,7 +79,7 @@
                                             </ul>
                                         </li>
                                         <li>
-                                            <a id="wishlist-total" title="Giỏ hàng" href="\CheckOut\Index">
+                                            <a id="wishlist-total" title="Giỏ hàng" href="\Cart\Index">
                                                 <i class="fa fa-reorder"></i>
                                                 <span>Giỏ hàng </span>
                                             </a>
