--- a/CuaHangThucPham/CuaHangThucPham/Views/Shared/_layoutRight.cshtml
+++ b/CuaHangThucPham/CuaHangThucPham/Views/Shared/_layoutRight.cshtml
@@ -73,18 +73,13 @@
                                             </ul>
                                         </li>
                                         <li>
-                                            <a id="wishlist-total" title="Giỏ hàng" href="\CheckOut\Index">
+                                            <a id="wishlist-total" title="Giỏ hàng" href="\Cart\Index">
                                                 <i class="fa fa-reorder"></i>
                                                 <span>Giỏ hàng </span>
                                             </a>
                                         </li>
                                     }
                                 </ul>
-                                <div class="search-box">
-                                    <input class="input-text" placeholder="search.." type="text">
-                                    <button class="search-btn"><i class="fa fa-search"></i></button>
-                                </div>
-
                             </div>
                         </div>
                     </div>
@@ -240,13 +235,6 @@
                             <a class="list-group-item" href="#">Thực phẩm tươi sống</a>
                             <a class="list-group-item last" href="#">Thực phẩm khác</a>
                         </div>
-                    </div>
-                </div>
-                <div class="productblock-title">Recent Posts</div>
-                <div class="blog-categories-block category_block">
-                    <div class="list-group">
-                        <a class="list-group-item" href="#">Gallery Post Format</a> <a class="list-group-item" href="#">Recent Posts</a> <a class="list-group-item" href="
-    #">Gallery Post Format</a> <a class="list-group-item" href="#">Standard Post Format</a> <a class="list-group-item last" href="#">Image Post Format</a>
                     </div>
                 </div>
                 <!-- end blog-sidebar -->
