--- a/CuaHangThucPham/CuaHangThucPham/Views/Home/About.cshtml
+++ b/CuaHangThucPham/CuaHangThucPham/Views/Home/About.cshtml
@@ -1,30 +1,29 @@
-﻿
+﻿@using CuaHangThucPham.Models;
 @{
     ViewBag.Title = "About";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    var blogs = (List<CuaHangThucPham.Models.Blog>)ViewBag.Blogs;
 }
 <div class="container">
     <ul class="breadcrumb">
-        <li><a href="index.html"><i class="fa fa-home"></i></a></li>
-        <li><a href="about-us.html">About Us</a></li>
+        <li><a href="/Home/Index"><i class="fa fa-home"></i></a></li>
+        <li><a>Giới Thiệu</a></li>
     </ul>
     <div class="row">
 
         <div class="wwd">
-            <div class="col-sm-6"><img class="img-responsive" src="~/Public/image/blog/blog_4.jpg" alt="#"></div>
+            <div class="col-sm-6"><img class="img-responsive" src="~/Public/image/blog/@blogs[0].Image" alt="#"></div>
             <div class="col-sm-6">
                 <div class="column-inner ">
                     <div class="wrapper">
-                        <h4 class="tf">We made a unique &amp; Beautyfull theme </h4>
+                        <h4 class="tf">@blogs[0].Title</h4>
                         <div class="desc">
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                                laborum.
+                                @blogs[0].Content.Substring(0, 300)...
                             </p>
                         </div>
                         <div class="buttton">
-                            <button class="btn">READ MORE</button>
+                            <p><a class="btn" href="/Blog/SingaleBlog/@blogs[0].BlogID">Xem thêm</a></p>
                         </div>
                     </div>
                 </div>
@@ -35,35 +34,28 @@
         <div class="col-md-12">
             <div class="row">
                 <div class="services">
-                    <div class="col-sm-4">
-                        <h4 class="tf">What we do</h4>
-                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                        <p><a class="btn" href="#">Read more</a></p>
+                    @for (int i = 1; i < 4; i++)
+                    {
+                        <div class="col-sm-4">
+                            <h4 class="tf">@blogs[i].Title</h4>
+                            <p>@blogs[i].Content.Substring(0, 300)...</p>
+                            <p><a class="btn" href="/Blog/SingaleBlog/@blogs[i].BlogID">Xem thêm</a></p>
+                        </div>
+                    }
                     </div>
-                    <div class="col-sm-4">
-                        <h4 class="tf">What we do</h4>
-                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                        <p><a class="btn" href="#">Read more</a></p>
-                    </div>
-                    <div class="col-sm-4">
-                        <h4 class="tf">What we do</h4>
-                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                        <p><a class="btn" href="#">Read more</a></p>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
     <div class="row">
         <div class="col-md-12 team">
-            <h4 class="tf">Our Team </h4>
+            <h4 class="tf">Thành Viên Của Hàng</h4>
         </div>
     </div>
     <div class="row team">
         <div class="col-md-3 col-sm-3 team1 ">
             <div class="photo">
                 <div class="imageblock"> <img alt="#" src="~/Public/image/team1.jpg" class="img-responsive"> </div>
-                <div class="name"> <a href="#">Quốc Bảo</a> </div>
+                <div class="name"> <a href="https://www.facebook.com/baothuong2504">Quốc Bảo</a> </div>
                 <h3>Founder and CEO</h3>
                 Quản lý và chịu trách nhiệm về mọi mặt của nhà hàng
             </div>
@@ -71,7 +63,7 @@
         <div class="col-md-3 col-sm-3 team1 ">
             <div class="photo">
                 <div class="imageblock"> <img alt="#" src="~/Public/image/team2.jpg" class="img-responsive"> </div>
-                <div class="name"> <a href="#">Quốc Bảo</a> </div>
+                <div class="name"> <a href="https://www.facebook.com/baothuong2504">Quốc Bảo</a> </div>
                 <h3>Founder and CEO</h3>
                 Quản lý và chịu trách nhiệm về mọi mặt của nhà hàng
             </div>
@@ -79,7 +71,7 @@
         <div class="col-md-3 col-sm-3 team1 ">
             <div class="photo">
                 <div class="imageblock"> <img alt="#" src="~/Public/image/team3.jpg" class="img-responsive"> </div>
-                <div class="name"> <a href="#">Quốc Bảo</a> </div>
+                <div class="name"> <a href="https://www.facebook.com/baothuong2504">Quốc Bảo</a> </div>
                 <h3>Founder and CEO</h3>
                 Quản lý và chịu trách nhiệm về mọi mặt của nhà hàng
             </div>
@@ -87,7 +79,7 @@
         <div class="col-md-3 col-sm-3 team1 ">
             <div class="photo">
                 <div class="imageblock"> <img alt="#" src="~/Public/image/team4.jpg" class="img-responsive"> </div>
-                <div class="name"> <a href="#">Quốc Bảo</a> </div>
+                <div class="name"> <a href="https://www.facebook.com/baothuong2504">Quốc Bảo</a> </div>
                 <h3>Founder and CEO</h3>
                 Quản lý và chịu trách nhiệm về mọi mặt của nhà hàng
             </div>
