--- a/CuaHangThucPham/CuaHangThucPham/Views/Shared/_layoutLeft1.cshtml
+++ b/CuaHangThucPham/CuaHangThucPham/Views/Shared/_layoutLeft1.cshtml
@@ -74,18 +74,13 @@
                                             </ul>
                                         </li>
                                         <li>
-                                            <a id="wishlist-total" title="Giỏ hàng" href="\CheckOut\Index">
+                                            <a id="wishlist-total" title="Giỏ hàng" href="\Cart\Index">
                                                 <i class="fa fa-reorder"></i>
                                                 <span>Giỏ hàng </span>
                                             </a>
                                         </li>
                                     }
                                 </ul>
-                                <div class="search-box">
-                                    <input class="input-text" placeholder="search.." type="text">
-                                    <button class="search-btn"><i class="fa fa-search"></i></button>
-                                </div>
-
                             </div>
                         </div>
                     </div>
@@ -142,8 +137,12 @@
                                         <table class="table table-bordered">
                                             <tbody>
                                                 <tr>
-                                                    <td class="text-right"><strong>Tổng tiền</strong></td>
-                                                    <td class="text-right">@string.Format("{0:#,##0}", ViewBag.sum)</td>
+                                                    @if (ViewBag.sum != null)
+                                                    {
+                                                        <td class="text-right"><strong>Tổng tiền</strong></td>
+                                                        <td class="text-right">@string.Format("{0:#,##0}", ViewBag.sum)</td>
+                                                    }
+
                                                 </tr>
                                             </tbody>
                                         </table>
@@ -161,7 +160,7 @@
                         }
                         else
                         {
-                            <button type="button" class="btn btn-inverse btn-block btn-lg dropdown-toggle cart-dropdown-button">
+                            @*<button type="button" class="btn btn-inverse btn-block btn-lg dropdown-toggle cart-dropdown-button">
                                 <span id="cart-total">
                                     <span class="cart-title">Giỏ hảng</span><br>
                                     1 sản phẩm
@@ -196,7 +195,7 @@
                                         <p class="text-right"> <span class="btn-viewcart"><a href="\Cart\Index"><strong><i class="fa fa-shopping-cart"></i> View Cart</strong></a></span> <span class="btn-checkout"><a href="" \CheckOut\Index""><strong><i class="fa fa-share"></i> Checkout</strong></a></span>                                        </p>
                                     </div>
                                 </li>
-                            </ul>
+                            </ul>*@
                         }
                     </div>
                 </div>
@@ -226,17 +225,28 @@
     <div class="container">
         <ul class="breadcrumb">
             <li><a href="index.html"><i class="fa fa-home"></i></a></li>
-            <li><a href="#">Account</a></li>
-            <li><a href="register.html">Register</a></li>
         </ul>
         <div class="row">
             <div class="col-sm-3 hidden-xs column-left" id="column-left">
                 <div class="column-block">
-                    <div class="columnblock-title">Account</div>
+                    <div class="columnblock-title">Danh mục</div>
                     <div class="account-block">
                         <div class="list-group">
-                            <a class="list-group-item" href="\Account\Login">Login</a> <a class="list-group-item" href="register.html">Register</a> <a class="list-group-item" href="forgetpassword.html">Forgotten Password</a> <a class="list-group-item" href="#">My Account</a>                            <a class="list-group-item" href="#">Address Book</a> <a class="list-group-item" href="#">Wish List</a> <a class="list-group-item" href="#">Order History</a> <a class="list-group-item" href="download">Downloads</a> <a class="list-group-item"
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        href="#">Reward Points</a> <a class="list-group-item" href="#">Returns</a> <a class="list-group-item" href="#">Transactions</a> <a class="list-group-item" href="#">Newsletter</a><a class="list-group-item last" href="#">Recurring payments</a>
+                            @if (Session["name"] != null)
+                            {
+                                <a href="\Account\Register" class="list-group-item">Thông tin tài khoản</a>
+                                <a href="\Cart\Index" class="list-group-item">Giỏ hàng</a>
+                                <a href="\Order\Index" class="list-group-item">Đơn hàng đã mua</a>
+                                <a href="\CheckOut\Index" class="list-group-item">Thanh toán</a>
+                                <a href="" class="list-group-item">Danh sách yêu thích</a>
+                                <a href="\Account\Logout" class="list-group-item">Đăng xuất</a>
+                            }
+                            else
+                            {
+                                <a href="\Account\Register" class="list-group-item">Đăng ký</a>
+                                <a href="\Account\Logout" class="list-group-item">Đăng nhập</a>
+                            }
+
                         </div>
                     </div>
                 </div>
