xong Admin/ThucPham

--- a/CuaHangThucPham/CuaHangThucPham/Areas/Admin/Views/ProductAdmin/Index.cshtml
+++ b/CuaHangThucPham/CuaHangThucPham/Areas/Admin/Views/ProductAdmin/Index.cshtml
@@ -46,7 +46,9 @@
                                 <td>@subCategories[i].SubCategoriesName</td>
                                 <td>
                                     <div>
-                                        <button type="button" class="btn btn-primary waves-effect waves-light" onclick="">Sửa</button>
+                                        <a href="EditProduct/@products[i].ProductID">
+                                            <button type="button" class="btn btn-primary waves-effect waves-light" onclick="">Sửa</button>
+                                        </a>
                                     </div>
                                 </td>
                             </tr>
