--- a/CuaHangThucPham/CuaHangThucPham/Areas/Admin/Views/ProductAdmin/AddProduct.cshtml
+++ b/CuaHangThucPham/CuaHangThucPham/Areas/Admin/Views/ProductAdmin/AddProduct.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     ViewBag.Title = "AddProduct";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+    var subCategories = (List<CuaHangThucPham.Models.SubCategory>)ViewBag.subCategories;
 }
 
 <div class="content-page">
@@ -11,7 +12,7 @@
                 <div class="col-12">
                     <div class="card">
                         <div class="card-body">
-                            <h4 class="mt-0 header-title">Thêm Mới Sản Phẩm</h4>
+                            <h4 class="mt-0 header-title">Thêm Mới Sản Phẩm</h4></br>
                             <form method="post" action="/Admin/ProductAdmin/AddProduct" enctype="multipart/form-data">
                                 <div class="row">
                                     <div class="col-sm-6">
@@ -25,12 +26,11 @@
                                             <label class="col-sm-3 col-form-label">Loại Sản Phẩm</label>
                                             <div class="col-sm-9">
                                                 <select name="subcate" class="form-control">
+                                                    @foreach (var item in subCategories)
+                                                     {
+                                                        <option value="@item.SubCategoriesID">@item.SubCategoriesName</option>
 
-                                                    @*@foreach (var item in Model)
-                        {
-                            <option value="@item.SubCategoriesID">@item.SubCategoriesName</option>
-
-                        }*@
+                                                     }
                                                 </select>
                                             </div>
                                         </div>
@@ -81,13 +81,13 @@
                                         <div class="form-group row">
                                             <label for="example-text-input-sm" class="col-sm-2 col-form-label">Mô Tả</label>
                                             <div class="col-sm-10">
-                                                <textarea required name="summary" class="form-control" rows="16"></textarea>
+                                                <textarea required name="area" class="form-control" rows="16"></textarea>
                                             </div>
                                         </div>
                                         <div class="form-group row">
                                             <label for="example-date-input" class="col-sm-3 col-form-label">Ngày Thêm</label>
                                             <div class="col-sm-9">
-                                                <input class="form-control" type="date" value="@String.Format("{0:yyyy-MM-dd}", DateTime.Now)" id="example-date-input">
+                                                <input class="form-control" name="date" type="date" value="@String.Format("{0:yyyy-MM-dd}", DateTime.Now)" id="example-date-input">
                                             </div>
                                         </div>
                                     </div>
@@ -117,3 +117,34 @@
     </div>
     <!-- content -->
 </div>
+
+<script>
+    window.onload = function () {
+        if($("#elm1").length > 0){
+            tinymce.init({
+                selector: "textarea#elm1",
+                theme: "modern",
+                height:300,
+                plugins: [
+                    "advlist autolink link image lists charmap print preview hr anchor pagebreak spellchecker",
+                    "searchreplace wordcount visualblocks visualchars code fullscreen insertdatetime media nonbreaking",
+                    "save table contextmenu directionality emoticons template paste textcolor"
+                ],
+                toolbar: "insertfile undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | l      ink image | print preview media fullpage | forecolor backcolor emoticons",
+                style_formats: [
+                    {title: 'Bold text', inline: 'b'},
+                    {title: 'Red text', inline: 'span', styles: {color: '#ff0000'}},
+                    { title: 'Red header', block: 'h1', styles: { color: '#ff0000' } },
+                    { title: 'Red header', block: 'h2', styles: { color: '#ff0000' } },
+                    { title: 'Red header', block: 'h3', styles: { color: '#ff0000' } },
+                    { title: 'Black header', block: 'h1', styles: { color: '#000000' } },
+                    { title: 'Black header', block: 'h2', styles: { color: '#000000' } },
+                    {title: 'Black header', block: 'h3', styles: {color: '#000000'}}
+                ]
+            });
+        }
+        if ("@ViewBag.alert" != "") {
+            alertify.success("@ViewBag.alert");
+        }
+    }
+</script>
